--- a/todo/todo.html
+++ b/todo/todo.html
@@ -9,14 +9,13 @@
     <div class="container">
       <div class="header clearfix">
         <h3 class="text-muted">My Todos</h3>
+        {{> loginButtons}}
       </div>
-
       <div class="row marketing">
         <div class="col-lg-12">
           {{> main}}
         </div>
       </div>
-
       <footer class="footer">
         <p>&copy; MyTodos 2015</p>
       </footer>
@@ -24,16 +23,19 @@
     </div> <!-- /container -->
 </body>
 <template name="main">
+  {{#if currentUser}}
   <form class="new-todo">
     <div class="form-group">
     <input name="text" type="text" class="form-control" placeholder="Type a todo"/>
   </div>
   </form>
+  {{/if}}
   <ul>
     {{#each todos}}
     <li class="{{#if checked}}checked{{/if}}">
-      <button class="delete-todo">&times;</button>
-      <input type="checkbox" checked="{{checked}}" class="toggle-check"/>
+      {{#if currentUser}}  <button class="delete-todo">&times;</button>{{/if}}
+        {{#if currentUser}}<input type="checkbox"
+        checked="{{checked}}" class="toggle-check"/>{{/if}}
       <span class="text">{{text}}</span>
     </li>
     {{/each}}
